--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,12 @@
 .wrapper {
   width:100%;
   float:left;
-  background: linear-gradient(135deg, #002769 0%, #0050d8 100%);
   min-height:500px;
 }
 
+.head-section {
+  background: linear-gradient(135deg, #002769 0%, #0050d8 100%);
+  width:100%;
+  max-height: 1000px;
+  float:left;
+}
